examples/test/testpolicy9308.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9308
  namespace: namespace136
spec:
  podSelector:
    matchLabels:
      key9: value29
      key23: value8
      key27: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value18
      podSelector:
        matchLabels:
          key34: value4
          key38: value29
          key4: value18
